<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/historyCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:elevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardElevation="@dimen/card_elevation"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Header -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/historyCardTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/card_padding"
                android:text="@string/history_card_title_default"
                android:textSize="@dimen/card_title" />

            <ImageView
                android:id="@+id/historyCardButtonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:contentDescription="@string/history_card_button_delete"
                android:src="@drawable/ic_delete"
                android:visibility="gone" />

        </LinearLayout>

        <!-- Separator -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="2dp"
            android:background="#f2f2f2" />

        <!-- Body -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_padding">

            <TextView
                android:id="@+id/historyCardTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/history_card_time_default" />

            <TextView
                android:id="@+id/historyCardLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_card_location_default" />

            <Button
                android:id="@+id/historyCardAttach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/history_card_button_attach"
                android:textColor="@color/colorPrimary"
                android:theme="@style/ButtonFlatPrimary"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/historyCardEdge"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@drawable/card_edge" />

</android.support.v7.widget.CardView>