<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".ui.emergency.EmergencyActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/emergencyCardInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_padding"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_padding">

            <TextView
                android:id="@+id/emergencyTvInfoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/ic_info"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/emergency_text_title_add_pic"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/emergencyTvInfoMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emergency_text_info_add_pic" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#D9D9D9">

        <ImageView
            android:id="@+id/emergencyIvPictureTaken"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:contentDescription="@string/emergency_hint_picture"
            android:scaleType="centerInside"
            android:src="@drawable/accident"
            android:transitionName="transitionPicture" />

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/emergencyFamAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:fab_addButtonColorNormal="@color/fab_menu_normal"
            app:fab_addButtonColorPressed="@color/fab_menu_pressed"
            app:fab_labelStyle="@style/FabLabel"
            app:fab_labelsPosition="left">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/emergencyButtonVoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/fab_item_normal"
                app:fab_colorPressed="@color/fab_item_pressed"
                app:fab_icon="@drawable/ic_voice"
                app:fab_title="@string/emergency_button_voice" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/emergencyButtonCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/fab_item_normal"
                app:fab_colorPressed="@color/fab_item_pressed"
                app:fab_icon="@drawable/ic_camera"
                app:fab_title="@string/emergency_button_camera" />

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </RelativeLayout>

    <com.omega_r.libs.OmegaCenterIconButton
        android:id="@+id/emergencyBtnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_padding"
        android:layout_marginBottom="0dp"
        android:drawableStart="@drawable/ic_send"
        android:text="@string/emergency_button_send"
        android:theme="@style/ButtonAccent" />
</LinearLayout>