<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:focusableInTouchMode="true"
    tools:context=".ui.signup.TokenFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_elevation"
        app:contentPadding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signUpTvSmsSent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_sms_sent"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/signUpTvChangePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/signup_change_phone"
                android:textAlignment="center" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <!-- Token -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/signUpTilToken"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:theme="@style/TextInput"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_token"
            android:drawablePadding="8dp"
            android:hint="@string/signup_label_token"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <com.omega_r.libs.OmegaCenterIconButton
        android:id="@+id/signUpButtonConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_confirm"
        android:text="@string/signup_button_confirm"
        android:theme="@style/ButtonNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>