<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/colorBackground"
                                             android:focusableInTouchMode="true"
                                             tools:context=".ui.signup.PhoneFragment">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_elevation"
            android:id="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:contentPadding="16dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_text_fill"
                android:textAlignment="center"/>
    </android.support.v7.widget.CardView>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/signUpTilName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/TextInput"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/cardView">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:hint="@string/signup_label_name"
                android:inputType="text|textCapSentences"
                android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/signUpTilPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/TextInput"
            app:errorEnabled="true" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/signUpTilName">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="8dp"
                android:hint="@string/signup_label_phone"
                android:inputType="phone"
                android:maxLength="20"
                android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <com.omega_r.libs.OmegaCenterIconButton
        android:id="@+id/signUpInfoBtnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:drawableEnd="@drawable/ic_next"
        android:text="@string/signup_button_next"
        android:theme="@style/ButtonNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>